# magic-bot

./: pyproject.toml
magic_bot/: slack.py
