[tool.poetry]
name = "magic-bot"
version = "0.1.0"
description = ""
authors = ["greenpea88 <green_pea88@naver.com>"]
packages = [{ include = "magic_bot" }]

[tool.poetry.dependencies]
python = "^3.9"
slack-sdk = "^3.15.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
